--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-HELP.md
+# HELP.md
+.DS_Store
+*.properties
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
-.yml
-.properties
-
-.DS_Store
 
 ### STS ###
 .apt_generated
