--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+// QueryDSL
+// buildscript {
+// 	ext {
+// 		queryDslVersion = "5.0.0"
+// 	}
+// }
+
 plugins {
 	id 'org.springframework.boot' version '2.7.1-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -28,6 +35,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	// implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.0'
+
+	// QueryDSL
+	// implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	// annotationProcessor(
+	// 	"javax.persistence:javax.persistence-api",
+	// 	"javax.annotation:javax.annotation-api",
+	// 	"com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
+	// )
+
+	// QueryDSL
+	// sourceSets {
+	// 	main {
+	// 		java {
+	// 			srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+	// 		}
+	// 	}
+	// }
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
