--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # UI Project
 **/web-ui/**/**
 
+# Back-end
+
 # HELP.md
 .DS_Store
 *.properties
@@ -43,3 +45,27 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Front-end
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
