--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
 	id 'java'
 }
 
-group = 'com.eosa'
+group = 'com'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -35,6 +35,9 @@ dependencies {
 
 	implementation 'com.google.code.gson:gson:2.9.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.7.0'
+	implementation 'org.webjars.npm:bootstrap:5.2.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'	
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.0'
