--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # UI Project
 **/web-ui/**
 **/ui/**
-!/resources/static/assets/**
-/resources/static/
+!/resources/static/assets/
+src/main/resources/static/
 # Back-end
 
 # HELP.md
