--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,16 @@ dependencies {
 
 	implementation 'com.google.code.gson:gson:2.9.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.webjars:sockjs-client:1.1.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3-1'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.7.0'
 	implementation 'org.webjars.npm:bootstrap:5.2.0'
+	implementation 'org.webjars.bower:vue:2.5.16'
+	implementation 'org.webjars.bower:axios:0.17.1'
+	implementation 'com.google.code.gson:gson:2.8.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'	
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.0'
