[관리자]회원등록(X) -> 탐정 등록 반영중

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # UI Project
 **/web-ui/**
 **/ui/**
-!/resources/static/assets/
+# !/resources/static/assets/
+! /resources/static/assets/**
 src/main/resources/static/
 # Back-end
 
