사용자페이지 일반 로그인 버그 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # UI Project
 **/web-ui/**
 **/ui/**
-src/main/resources/static/
+
+/src/main/resources/static
+!**/assets/
+
 # Back-end
 
 # HELP.md
