--- a/build.gradle
+++ b/build.gradle
@@ -46,12 +46,12 @@ dependencies {
 
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'	
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.0'
-	// implementation 'com.auth0:java-jwt:4.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'com.auth0:java-jwt:4.0.0'
 
-	// implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	// runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    // runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'	
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'	
 
 	compileOnly 'org.projectlombok:lombok'
 
@@ -59,8 +59,7 @@ dependencies {
 
 	runtimeOnly 'mysql:mysql-connector-java'	
 
-	implementation 'org.springframework.boot:spring-boot-configuration-processor'
-	// annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
