--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,11 @@ dependencies {
 	implementation 'org.webjars.bower:axios:0.17.1'
 	implementation 'com.google.code.gson:gson:2.9.0'
 
-
 	implementation 'org.springframework.boot:spring-boot-starter-security'	
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'com.auth0:java-jwt:4.0.0'
+
+	implementation 'net.nurigo:sdk:4.2.4'
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
