ec2 배포 준비중

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 **/web-ui/**
 **/ui/**
 
-# /src/main/resources/static
-!**/assets/
+/src/main/resources/static
+!/src/main/resources/static/assets
 
 # Back-end
 logfile*.txt
