--- a/build.gradle
+++ b/build.gradle
@@ -75,44 +75,44 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-// // Intergration Springboot & React
-// def UI = "$projectDir/src/main/ui"
+// Intergration Springboot & React
+def UI = "$projectDir/src/main/ui"
 
-// sourceSets {
-// 	main {
-// 		resources { srcDirs = ["$projectDir/src/main/resources"]
-// 		}
-// 	}
-// }
+sourceSets {
+	main {
+		resources { srcDirs = ["$projectDir/src/main/resources"]
+		}
+	}
+}
 
-// processResources { dependsOn "copyReactBuildFiles" }
+processResources { dependsOn "copyReactBuildFiles" }
 
-// task installReact(type: Exec) {
-// 	workingDir "$UI"
-// 	inputs.dir "$UI"
-// 	group = BasePlugin.BUILD_GROUP
-// 	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-// 		commandLine "npm.cmd", "audit", "fix"
-// 		commandLine 'npm.cmd', 'install' }
-// 	else {
-// 		commandLine "npm", "audit", "fix" commandLine 'npm', 'install'
-// 	}
-// }
+task installReact(type: Exec) {
+	workingDir "$UI"
+	inputs.dir "$UI"
+	group = BasePlugin.BUILD_GROUP
+	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+		commandLine "npm.cmd", "audit", "fix"
+		commandLine 'npm.cmd', 'install' }
+	else {
+		commandLine "npm", "audit", "fix" commandLine 'npm', 'install'
+	}
+}
 
-// task buildReact(type: Exec) {
-// 	dependsOn "installReact"
-// 	workingDir "$UI"
-// 	inputs.dir "$UI"
-// 	group = BasePlugin.BUILD_GROUP
-// 	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-// 		commandLine "npm.cmd", "run-script", "build"
-// 	} else {
-// 		commandLine "npm", "run-script", "build"
-// 	}
-// }
+task buildReact(type: Exec) {
+	dependsOn "installReact"
+	workingDir "$UI"
+	inputs.dir "$UI"
+	group = BasePlugin.BUILD_GROUP
+	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+		commandLine "npm.cmd", "run-script", "build"
+	} else {
+		commandLine "npm", "run-script", "build"
+	}
+}
 
-// task copyReactBuildFiles(type: Copy) {
-// 	dependsOn "buildReact"
-// 	from "$UI/build"
-// 	into "$projectDir/src/main/resources/static"
-// }
+task copyReactBuildFiles(type: Copy) {
+	dependsOn "buildReact"
+	from "$UI/build"
+	into "$projectDir/src/main/resources/static"
+}
