--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,3 @@
-// QueryDSL
-// buildscript {
-// 	ext {
-// 		queryDslVersion = "5.0.0"
-// 	}
-// }
-
 plugins {
 	id 'org.springframework.boot' version '2.7.1-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -12,7 +5,7 @@ plugins {
 }
 
 group = 'com.eosa'
-version = '0.0.1-SNAPSHOT'
+version = '0.8.0'
 sourceCompatibility = '11'
 
 configurations {
