--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'com.eosa'
-version = '0.8.0926Beta'
+version = '0.8.0927Beta01'
 sourceCompatibility = '11'
 
 configurations {
