--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'com.eosa'
-version = '0.8.0928Beta2024'
+version = '0.8.09291429'
 sourceCompatibility = '11'
 
 configurations {
