--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'com.eosa'
-version = '0.9.09301733'
+version = '1.0.221004.1219'
 sourceCompatibility = '11'
 
 configurations {
