--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'com.eosa'
-version = '1.221004.1958'
+version = '1.2210052239'
 sourceCompatibility = '11'
 
 configurations {
