[관리자] 업체 상세조회에서 지역, 업무분야 항목들 동적으로 받아오게 변경

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 }
 
 group = 'com.eosa'
-version = '1.1007.1230'
-sourceCompatibility = '11'
+version = '1.1007.1444'
+sourceCompatibility = 11
 
 configurations {
 	compileOnly {
